--- a/pom.xml
+++ b/pom.xml
@@ -246,6 +246,12 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.19</version>
         </dependency>
+        <!-- Xerces for (somewhat) sane XML validation -->
+        <dependency>
+            <groupId>xerces</groupId>
+            <artifactId>xercesImpl</artifactId>
+            <version>2.10.0</version>
+        </dependency>
 
 
         <!-- TEST ONLY DEPENDENCIES -->
