--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
         <dependency>
             <groupId>org.nsesa</groupId>
             <artifactId>nsesa-server-api</artifactId>
-            <version>0.0.1</version>
+            <version>0.3-SNAPSHOT</version>
         </dependency>
 
         <!--Spring-->
