--- a/pom.xml
+++ b/pom.xml
@@ -328,6 +328,26 @@
                     </webResources>
                 </configuration>
             </plugin>
+
+            <!-- ***************************** Jetty plugin    ***************************** -->
+            <plugin>
+                <groupId>org.mortbay.jetty</groupId>
+                <artifactId>maven-jetty-plugin</artifactId>
+                <version>6.1.26</version>
+                <configuration>
+                    <webAppSourceDirectory>web</webAppSourceDirectory>
+                    <contextPath>/services</contextPath>
+                    <scanIntervalSeconds>10</scanIntervalSeconds>
+                    <connectors>
+                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                            <port>9090</port>
+                            <maxIdleTime>60000</maxIdleTime>
+                        </connector>
+                    </connectors>
+                    <stopKey>NsesaServer</stopKey>
+                    <stopPort>9813</stopPort>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 
