--- a/pom.xml
+++ b/pom.xml
@@ -115,9 +115,9 @@
         </dependency>
 
         <dependency>
-            <groupId>c3p0</groupId>
+            <groupId>com.mchange</groupId>
             <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
+            <version>0.9.5-pre1</version>
         </dependency>
 
         <dependency>
