--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     <artifactId>server-demo-impl</artifactId>
     <packaging>war</packaging>
     <name>Server Impl</name>
-    <version>0.5-SNAPSHOT</version>
+    <version>0.5</version>
 
     <repositories>
         <repository>
