--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,14 @@
             <id>codehaus.org</id>
             <url>http://repository.codehaus.org</url>
         </repository>
+        <repository>
+            <id>nsesa-server-api-repo</id>
+            <url>https://raw.github.com/e-parliament/nsesa-server-api/mvn-repo/</url>
+            <snapshots>
+                <enabled>true</enabled>
+                <updatePolicy>always</updatePolicy>
+            </snapshots>
+        </repository>
     </repositories>
 
     <properties>
@@ -39,6 +47,9 @@
         <project.name.long>Demo backend implementation</project.name.long>
         <maven.build.timestamp.format>yyyyMMdd_HHmm</maven.build.timestamp.format>
         <build.timestamp>${maven.build.timestamp}</build.timestamp>
+
+        <!-- Make sure to have this entry in your ~/.m2/settings.xml -->
+        <github.global.server>e-parliament.github.com</github.global.server>
     </properties>
 
     <dependencies>
@@ -365,8 +376,25 @@
                     <stopPort>9813</stopPort>
                 </configuration>
             </plugin>
+
+            <!-- ***************************** Maven deployment plugin    ***************************** -->
+            <plugin>
+                <artifactId>maven-deploy-plugin</artifactId>
+                <version>2.8.1</version>
+                <configuration>
+                    <altDeploymentRepository>internal.repo::default::file://${project.build.directory}/mvn-repo</altDeploymentRepository>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
+
+    <distributionManagement>
+        <repository>
+            <id>internal.repo</id>
+            <name>Temporary Staging Repository</name>
+            <url>file://${project.build.directory}/mvn-repo</url>
+        </repository>
+    </distributionManagement>
 
     <!-- ***************************** Profiles ***************************** -->
     <profiles>
