--- a/src/main/resources/nsesa-server.properties
+++ b/src/main/resources/nsesa-server.properties
@@ -4,7 +4,7 @@ jdbc.driver=org.h2.Driver
 #jdbc.driver=com.mysql.jdbc.Driver
 #jdbc.driver=org.postgresql.Driver
 
-jdbc.url=jdbc:h2:mem:nsesa
+jdbc.url=jdbc:h2:mem:nsesa;MVCC=true
 #jdbc.url=jdbc:mysql://localhost:3306/nsesa
 #jdbc.url=jdbc:postgresql://localhost/nsesa
 
