--- a/pom.xml
+++ b/pom.xml
@@ -638,20 +638,19 @@
 
             <!-- ***************************** Jetty plugin    ***************************** -->
             <plugin>
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.26</version>
+                <groupId>org.eclipse.jetty</groupId>
+                <artifactId>jetty-maven-plugin</artifactId>
+                <version>9.2.1.v20140609</version>
                 <configuration>
                     <webAppSourceDirectory>web</webAppSourceDirectory>
-                    <contextPath>/services</contextPath>
+                    <httpConnector>
+                        <port>9090</port>
+                    </httpConnector>
+                    <webApp>
+                        <contextPath>/services</contextPath>
+                    </webApp>
                     <scanIntervalSeconds>10</scanIntervalSeconds>
-                    <connectors>
-                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
-                            <port>9090</port>
-                            <maxIdleTime>60000</maxIdleTime>
-                        </connector>
-                    </connectors>
-                    <stopKey>NsesaServer</stopKey>
+                    <stopKey>Nsesa-Server</stopKey>
                     <stopPort>9813</stopPort>
                 </configuration>
             </plugin>
